# svd2rdf

./: Cargo.toml  README.adoc
examples/: ARM_Sample.svd.json  AT91SAM9CN11.svd.json  EFM32G200F16.svd.json  LPC1102_4_v4.svd.json  M051_Series.svd.json  M061.svd.json  MB9AF10xN.svd.json  MK02F12810.svd.json  all.json  e310x.svd.json  esp32c3.svd.json  ht32f125x.svd.json  nrf51.svd.json
scripts/: create-top-rdf  generate-examples
src/: lib.rs  main.rs
src/snapshots/: svd2rdf__test__example.snap
