[package]
name = "svd2rdf"
version = "0.1.0"
edition = "2021"
description = "Converts CMSIS-SVD (System View Description) to the Register Description Format"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = { version = "1.8", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
svd-parser = "0.13"
svd-rs = "0.13"

[dev-dependencies]
insta = "1.12"
